Added improved config system with opt-out sync; ClientLoadedInEvent & PlayerLoadedInEvent (for client & server respectively), improved PopulateTagsEvent to work better with genetics; Few improvements here and there.